<resources>
    <string name="app_name">Interrogadito</string>
    <string name="mensaje">Cargue los datos de la pregunta</string>
    <string name="boton">Dar de alta la pregunta</string>
    <string name="categoria">Ingrese la categoría</string>
    <string name="puntaje">Puntaje de la pregunta</string>
    <string name="textoPregunta">Texto de la pregunta</string>
    <string name="boolTrue">Verdadero</string>
    <string name="boolFalse">Falso</string>

</resources>
